@@ -32,8 +32,13 @@ libxml.Element.Arguments = function(args) {
 
 libxml.Element.prototype.node = function() {
   var args = libxml.Element.Arguments(arguments);
+  var elem = null;
 
-  var elem = new libxml.Element(this.doc(), args[0], args[1], args[2], args[3]);
+  if (args[0] instanceof libxml.Element)
+    elem = args[0];
+  else
+    elem = new libxml.Element(this.doc(), args[0], args[1], args[2], args[3]);
+
   this.addChild(elem);
   return elem;
 };
